--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		terrainProvider: new Cesium.CesiumTerrainProvider({
 			url: Cesium.IonResource.fromAssetId(1640615),//get your asset ID from "My Assets" menu
 		}),	  
-		baseLayerPicker: true,
+		baseLayerPicker: false,
 		infoBox: false,
     });    
 
@@ -62,7 +62,7 @@
 		terrainProvider: new Cesium.CesiumTerrainProvider({
 			url: Cesium.IonResource.fromAssetId(1640502),//get your asset ID from "My Assets" menu
 		}),	  
-		baseLayerPicker: true,
+		baseLayerPicker: false,
 		infoBox: false,
     });    
 
