--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body style="margin:0;width:100vw;height:100vh;display:flex;flex-direction:row;font-family:Arial">
 <div style="height:100%;width:50%;" id="cesiumContainer1">
 	<span style="display:block;position:absolute;z-Index:1001;top:0;background-color: rgba(0, 0, 0, 0.5);color:darkorange;padding:13px">06/04/2023</span>
-	<span style="display:block;position:absolute;z-Index:1001;bottom:10%;background-color: rgba(0, 0, 0, 0.5);color:white;padding:13px;font-size:14px;user-select:none;">
+</div>
+<div style="height:100%;width:50%;background-color:black;" id="cesiumContainer2">
+	<span style="display:block;position:absolute;z-Index:1001;top:0;background-color: rgba(0, 0, 0, 0.5);color:darkorange;padding:13px">17/02/2023</span>
+	<span style="display:block;position:absolute;z-Index:1001;bottom:10%;right:0;background-color: rgba(0, 0, 0, 0.5);color:white;padding:13px;font-size:14px;user-select:none;">
 		<b><u>Cesium JS mirror v1.0</u></b><br>
 		· Use the <b>left panel</b> to control the camera<br>
 		· <b>Click+drag</b> to move the position<br>
 		· <b>Control+drag</b> to rotate camera<br>
 		· <b>Scroll</b> to zoom in/out<br>
 		<span><a style="color:darkorange" href="https://theroamingworkshop.cloud" target="_blank">© The Roaming Workshop <span id="y"></span></a></span>
-		</span>
-</div>
-<div style="height:100%;width:50%;background-color:black;" id="cesiumContainer2">
-	<span style="display:block;position:absolute;z-Index:1001;top:0;background-color: rgba(0, 0, 0, 0.5);color:darkorange;padding:13px">17/02/2023</span>
+    </span>
 </div>
 <script>
 	// INSERT ACCESS TOKEN
